# OctoScout

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: mcp.json
.claude/commands/: diagnose.md  matrix.md
.github/workflows/: ci.yml
assets/: plan.md
eval/: __init__.py  __main__.py  loader.py  models.py  runner.py  scorers.py
eval/cases/api_changes/: torch_autocast_device.yaml  transformers_trainer_tokenizer.yaml
eval/cases/import_errors/: missing_package.yaml  vllm_cuda_mismatch.yaml
eval/cases/local_issues/: index_error.yaml  simple_name_error.yaml
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: diagnose.md
plugin/skills/diagnose-error/: SKILL.md
scripts/: generate_pages.py
src/octoscout/: __init__.py  __main__.py  cli.py  config.py  models.py
src/octoscout/agent/: __init__.py  core.py  prompts.py  tools.py
src/octoscout/campaign/: diagnosis_runner.py  discovery.py  models.py  replier.py  reporter.py  sandbox.py  tracker.py
src/octoscout/community/: __init__.py  issue_drafter.py  models.py  reply_suggester.py
src/octoscout/diagnosis/: __init__.py  env_snapshot.py  local_checker.py  traceback_parser.py  triage.py
src/octoscout/matrix/: __init__.py  aggregator.py  comment_scorer.py  crawler.py  downloader.py  extractor.py  models.py  visualizer.py
tests/: test_aggregator.py  test_campaign.py  test_comment_scorer.py  test_community.py  test_config.py  test_crawler.py  test_downloader.py  test_env_snapshot.py  test_eval_scorers.py  test_extractor.py  test_github_client.py  test_mcp_server.py  test_traceback_parser.py  test_triage.py  test_version_filter.py
tests/fixtures/: transformers_type_error.txt  user_name_error.txt  vllm_cuda_mismatch.txt
(+25 files in other folders)
