[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octoscout"
version = "0.1.0"
description = "LLM-Powered GitHub Issues Agent: Search, Ask, and Give Back"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OctoScout Contributors" },
]
keywords = ["llm", "github", "debugging", "compatibility", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
[project.urls]
Homepage = "https://github.com/tommy-fcy/OctoScout"
Repository = "https://github.com/tommy-fcy/OctoScout"
Issues = "https://github.com/tommy-fcy/OctoScout/issues"

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]
vector = [
    "faiss-cpu>=1.7.0",
    "sentence-transformers>=2.0.0",
]

[project.scripts]
octoscout = "octoscout.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/octoscout"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by formatter, not linter

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
